Improve code for removeAllHistoryAfterNode().